<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/return_confirm_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CustomerMainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/return_book_confirm_title" />

    <ListView
        android:id="@+id/listView_confirm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
    </ListView>

    <TextView
        android:id="@+id/return_log_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="" />

    <ListView
        android:id="@+id/listView_log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
    </ListView>

    <Button
        android:id="@+id/returnBookConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_book_confirm"/>

    <Button
        android:id="@+id/backToCustomerMainInConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_confirm_back_customer_main"/>

</LinearLayout>
